--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -21,6 +21,6 @@ server {
         expires max;
     }
 
-    error_log         {{kibana_proxy_log}};
+    access_log         {{kibana_proxy_log}};
 
 }
