--- a/templates/kibana.yml.j2
+++ b/templates/kibana.yml.j2
@@ -2,45 +2,64 @@
 # Do NOT modify this file by hand!
 
 # Kibana is served by a back end server. This controls which port to use.
-port: {{ kibana_port }}
+server.port: {{kibana_port}}
 
 # The host to bind the server to.
-host: {{kibana_host}}
+server.host: "{{kibana_host}}"
+
+# If you are running kibana behind a proxy, and want to mount it at a path,
+# specify that path here. The basePath can't end in a slash.
+# server.basePath: ""
 
 # The Elasticsearch instance to use for all your queries.
-elasticsearch_url: {{kibana_elasticsearch_url}}
+elasticsearch.url: "{{kibana_elasticsearch_url}}"
 
 # preserve_elasticsearch_host true will send the hostname specified in `elasticsearch`. If you set it to false,
 # then the host you use to connect to *this* Kibana instance will be sent.
-elasticsearch_preserve_host: {{kibana_elasticsearch_preserve_host|to_nice_json}}
+elasticsearch.preserveHost: {{kibana_elasticsearch_preserve_host|to_nice_json}}
 
 # Kibana uses an index in Elasticsearch to store saved searches, visualizations
 # and dashboards. It will create a new index if it doesn't already exist.
-kibana_index: {{kibana_index}}
-
-{% if kibana_elasticsearch_username and kibana_elasticsearch_password %}
-# If your Elasticsearch is protected with basic auth, this is the user credentials
-# used by the Kibana server to perform maintence on the kibana_index at statup. Your Kibana
-# users will still need to authenticate with Elasticsearch (which is proxied thorugh
-# the Kibana server)
-kibana_elasticsearch_username: {{kibana_elasticsearch_username}}
-kibana_elasticsearch_password: {{kibana_elasticsearch_password}}
-{% endif -%}
-
-{% if kibana_elasticsearch_client_crt and kibana_elasticsearch_client_key %}
-# If your Elasticsearch requires client certificate and key
-kibana_elasticsearch_client_crt: {{kibana_elasticsearch_client_crt}}
-kibana_elasticsearch_client_key: {{kibana_elasticsearch_client_key}}
-{% endif -%}
-
-{% if kibana_ca %}
-# If you need to provide a CA certificate for your Elasticsarech instance, put
-# the path of the pem file here.
-ca: {{kibana_ca}}
-{% endif -%}
+kibana.index: {{kibana_index}}
 
 # The default application to load.
-default_app_id: {{kibana_default_app_id}}
+kibana.defaultAppId: "{{kibana_default_app_id}}"
+
+{% if kibana_elasticsearch_username and kibana_elasticsearch_password %}
+# If your Elasticsearch is protected with basic auth, these are the user credentials
+# used by the Kibana server to perform maintenance on the kibana_index at startup. Your Kibana
+# users will still need to authenticate with Elasticsearch (which is proxied through
+# the Kibana server)
+elasticsearch.username: "{{kibana_elasticsearch_username}}"
+elasticsearch.password: "{{kibana_elasticsearch_password}}"
+{% endif %}
+
+{% if kibana_ssl_key_file and kibana_ssl_cert_file %}
+# SSL for outgoing requests from the Kibana Server to the browser (PEM formatted)
+server.ssl.cert: {{kibana_ssl_cert_file}}
+server.ssl.key: {{kibana_ssl_key_file}}
+{% endif %}
+
+{% if kibana_elasticsearch_client_crt and kibana_elasticsearch_client_key %}
+# Optional setting to validate that your Elasticsearch backend uses the same key files (PEM formatted)
+elasticsearch.ssl.cert: {{kibana_elasticsearch_client_crt}}
+elasticsearch.ssl.key: {{kibana_elasticsearch_client_key}}
+{% endif %}
+
+{% if kibana_elasticsearch_ca %}
+# If you need to provide a CA certificate for your Elasticsearch instance, put
+# the path of the pem file here.
+# elasticsearch.ssl.ca: {{kibana_elasticsearch_ca}}
+{% endif %}
+
+
+# Set to false to have a complete disregard for the validity of the SSL
+# certificate.
+elasticsearch.ssl.verify: {{kibana_verify_ssl|to_nice_json}}
+
+# Time in milliseconds to wait for elasticsearch to respond to pings, defaults to
+# request_timeout setting
+# elasticsearch.pingTimeout: 1500
 
 # Time in milliseconds to wait for responses from the back end or elasticsearch.
 # This must be > 0
@@ -48,23 +67,24 @@ request_timeout: {{kibana_request_timeout}}
 
 # Time in milliseconds for Elasticsearch to wait for responses from shards.
 # Set to 0 to disable.
-shard_timeout: {{kibana_shard_timeout}}
+elasticsearch.shardTimeout: {{kibana_shard_timeout}}
 
-# Set to false to have a complete disregard for the validity of the SSL
-# certificate.
-verify_ssl: {{kibana_verify_ssl|to_nice_json}}
+# Time in milliseconds to wait for Elasticsearch at Kibana startup before retrying
+# elasticsearch.startupTimeout: 5000
 
-{% if kibana_ssl_key_file and kibana_ssl_cert_file %}
-# SSL for outgoing requests from the Kibana Server (PEM formatted)
-ssl_key_file: {{kibana_ssl_key_file}}
-ssl_cert_file: {{kibana_ssl_cert_file}}
-{% endif -%}
-
+{% if kibana_pid_file %}
 # Set the path to where you would like the process id file to be created.
-pid_file: {{kibana_pid_file}}
+pid.file: {{kibana_pid_file}}
+{% endif %}
 
-# Plugins that are included in the build, and no longer found in the plugins/ folder
-bundled_plugin_ids:
-{% for plugin in kibana_bundled_plugin_ids %}
-- {{plugin}}
-{% endfor %}
+# If you would like to send the log output to a file you can set the path below.
+# logging.dest: stdout
+
+# Set this to true to suppress all logging output.
+# logging.silent: false
+
+# Set this to true to suppress all logging output except for error messages.
+# logging.quiet: false
+
+# Set this to true to log all events, including system usage information and all requests.
+# logging.verbose: false
