Fix upstart script for kibana

--- a/templates/upstart.conf.j2
+++ b/templates/upstart.conf.j2
@@ -14,5 +14,4 @@ chdir {{kibana_home}}/www
 
 env NODE_ENV=production
 
-exec ./node/bin/node ./src/bin/kibana.js --config={{kibana_home}}/kibana.yml
-
+exec ./bin/kibana --config={{kibana_home}}/kibana.yml
